[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/shop_menu.gd" id="1"]

[node name="ShopMenu" type="CanvasLayer"]
layer = 11
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
text = "SHOP"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="Panel/VBox"]
text = "Gold: 0"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 140)

[node name="ItemList" type="VBoxContainer" parent="Panel/VBox/ScrollContainer"]
size_flags_horizontal = 3

[node name="CloseBtn" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 28)
text = "Close"
